# mistral-hackathon-finetuning

./: .gitignore  async_scraping.py  parsing.py  pyproject.toml  rag.py  requirements.txt  ressources.py  sandbox.ipynb  scenario_generator.py  scrapper.py
chroma/: chroma.sqlite3
scripts/: generate_scenarios.py
src/frontend/: package-lock.json  package.json
src/scraping/: ressources.py  sandbox.ipynb
src/scraping/scripts/: scrape_cases.py
