[tool.poetry]
name = "mistral-hackathon-finetuning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.4"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
pyarrow = "^16.1.0"
fastparquet = "^2024.5.0"
aiohttp = "^3.9.5"
langchain = "^0.2.5"
chromadb = "^0.5.3"
mistralai = "^0.4.1"
langchain-community = "^0.2.5"
openai = "^1.35.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
